feat(tests): add Oracle NUMBER scale fix tests, improve Decimal Column Typing and corresponding YAML configuration

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -529,3 +529,15 @@
     - 'No files in log segment'
   # This test validates that the R2 secret is created with ACCOUNT_ID
   # It will fail at data reading stage, but that proves the secret was created correctly
+
+- id: 84
+  name: Oracle NUMBER scale fix (https://github.com/slingdata-io/sling-cli/issues/584)
+  run: SCHEMA=ORACLE SOURCE=ORACLE TARGET=SNOWFLAKE sling run -r cmd/sling/tests/replications/r.28.oracle_number_scale.yaml
+  output_contains:
+    - 'execution succeeded'
+
+- id: 85
+  name: Oracle v11 NUMBER scale fix (https://github.com/slingdata-io/sling-cli/issues/584)
+  run: SCHEMA=SYSTEM SOURCE=ORACLE TARGET=POSTGRES sling run -r cmd/sling/tests/replications/r.28.oracle_number_scale.yaml
+  output_contains:
+    - 'execution succeeded'
