--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -454,7 +454,7 @@
 
 - id: 73
   name: Run sling mysql bit
-  run: 'sling run -d -r cmd/sling/tests/replications/r.22.yaml'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.22.mysql_bit_type.yaml'
   streams: 1
   output_contains:
     - execution succeeded
