fix(tests): update output_contains to remove leading characters for clarity

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -239,7 +239,7 @@
   run: 'sling run -d -r cmd/sling/tests/replications/r.09.yaml'
   streams: '>1'
   output_contains:
-    - '/ 7] running stream "public"."my_table_bytes"'
+    - 'running stream "public"."my_table_bytes"'
     - RUNNING
 
 - id: 42
