feat(tests): add MSSQL to parquet overwrite test and improve streaming in DuckDB. Fix for https://github.com/slingdata-io/sling-cli/issues/588

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -571,3 +571,9 @@
     TARGET: POSTGRES
   output_contains:
     - 'execution succeeded'
+
+- id: 86
+  name: MSSQL to parquet overwrite fix (https://github.com/slingdata-io/sling-cli/issues/588)
+  run: sling run -r cmd/sling/tests/replications/r.29.mssql_parquet_overwrite.yaml
+  output_contains:
+    - 'execution succeeded'
