fix(copy): ensure single file copy operation does not duplicate filenames

--- a/cmd/sling/tests/pipelines/p.03.test_copy_fix_demonstration.yaml
+++ b/cmd/sling/tests/pipelines/p.03.test_copy_fix_demonstration.yaml
@@ -45,6 +45,7 @@ steps:
       - type: copy
         from: "{loop.value.location}"
         to: local/tmp/output/{loop.value.name}
+        single_file: true
         id: copy_file
 
       - type: log
