feat(glue): add support for iceberg_glue target and enhance Glue connection properties

--- a/cmd/sling/tests/replications/r.23.iceberg_write.yaml
+++ b/cmd/sling/tests/replications/r.23.iceberg_write.yaml
@@ -6,7 +6,7 @@ hooks:
     # does not work for gcp or sql
     - type: check
       id: target_check
-      check: lower(target.name) != "iceberg_gcp" && lower(target.name) != "iceberg_sql"  
+      check: lower(target.name) != "iceberg_gcp" && lower(target.name) != "iceberg_sql"&& lower(target.name) != "iceberg_glue"
       failure_message: skipping target {target.name}
       on_failure: break
       
